[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["TAYLOR JOHNSON <TAYLOR.MCMINN@GMAIL.COM>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.7"
pandas = "^1.2.2"
matplotlib = "^3.3.4"
numpy = "^1.20.1"
sklearn = "^0.0"
seaborn = "^0.11.1"
statsmodels = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
